--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask
 spacy
+fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.8.0/fr_core_news_md-3.8.0-py3-none-any.whl
 PyMuPDF
 pytesseract
 Pillow
-feedparser
-beautifulsoup4
